# skyrim-special-edition-headtracking

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  HeadTracking.ini  README.md  THIRD-PARTY-NOTICES.md  manifest.json  pixi.toml
.github/workflows/: build.yml  release.yml
scripts/: deploy.ps1  install.cmd  package-release.ps1  release.ps1  show-changelog.ps1  uninstall.cmd  update-deps.ps1
src/: dllmain.cpp  pch.h
src/core/: config.cpp  config.h  constants.h  hotkey_utils.cpp  hotkey_utils.h  logger.cpp  logger.h  mod.cpp  mod.h  path_utils.cpp  path_utils.h  rtti_utils.cpp  rtti_utils.h  sse_addresses.cpp  sse_addresses.h
src/game/: game_state.cpp  game_state.h  skyrim_types.h
src/hooks/: camera_hook.cpp  camera_hook.h  crosshair_override.cpp  crosshair_override.h  gfx_value.h  hook_manager.cpp  hook_manager.h  hud_menu_hook.cpp  hud_menu_hook.h  input_hook.cpp  input_hook.h  marker_hook.cpp  marker_hook.h  player_hook.cpp  player_hook.h  projectile_hook.cpp  projectile_hook.h
src/ui/: crosshair_overlay.cpp  crosshair_overlay.h  notification.cpp  notification.h
